// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All props 1`] = `
<select
  autoComplete="none"
  className="tr__form-input-select apptr__input _input-select"
  id="SelectWidgetId"
  name="SelectWidgetId"
  onChange={[MockFunction]}
  style={
    Object {
      "overflow": "hidden",
      "textOverflow": "ellipsis",
      "whiteSpace": "nowrap",
    }
  }
  value="test2"
>
  <option
    value="test1"
  >
    something:test1
  </option>
  <option
    value="test2"
  >
    label for test2
  </option>
  <option
    disabled={true}
    value="disabled"
  >
    something:disabled
  </option>
  <optgroup
    label="something:has sub-choices"
  >
    <option
      value="subChoice1"
    >
      something:subChoice1
    </option>
    <option
      value="subChoice2"
    >
      label for subchoice2
    </option>
  </optgroup>
</select>
`;

exports[`Default props 1`] = `
<select
  autoComplete="none"
  className="tr__form-input-select apptr__input _input-select"
  id="SelectWidgetId"
  name="SelectWidgetId"
  style={
    Object {
      "overflow": "hidden",
      "textOverflow": "ellipsis",
      "whiteSpace": "nowrap",
    }
  }
  value=""
>
  <option
    value=""
  />
</select>
`;

exports[`Disabled 1`] = `
<select
  autoComplete="none"
  className="tr__form-input-select apptr__input _input-select"
  disabled={true}
  id="SelectWidgetId"
  name="SelectWidgetId"
  onChange={[MockFunction]}
  style={
    Object {
      "overflow": "hidden",
      "textOverflow": "ellipsis",
      "whiteSpace": "nowrap",
    }
  }
  value=""
>
  <option
    value=""
  />
</select>
`;

exports[`With blank choice 1`] = `
<select
  autoComplete="none"
  className="tr__form-input-select apptr__input _input-select"
  id="SelectWidgetId"
  name="SelectWidgetId"
  onChange={[MockFunction]}
  style={
    Object {
      "overflow": "hidden",
      "textOverflow": "ellipsis",
      "whiteSpace": "nowrap",
    }
  }
  value=""
>
  <option
    value=""
  />
  <option
    value="test1"
  >
    
  </option>
  <option
    value="test2"
  >
    label for test2
  </option>
  <option
    disabled={true}
    value="disabled"
  >
    
  </option>
  <optgroup
    label=""
  >
    <option
      value="subChoice1"
    >
      
    </option>
    <option
      value="subChoice2"
    >
      label for subchoice2
    </option>
  </optgroup>
</select>
`;
